initial parts of new line rendering system. mainly for drawing one-pixel-wide lines right now.

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,6 @@ sysinfo.txt
 *.meta
 # but don't ignore these ones because otherwise shader association is lost!!
 !/Resources/StandardMaterials/*.meta
+!/Resources/StandardMaterials/line_shaders/*.meta
 !/Resources/StandardMaterials/defaults/*.meta
 
