move assignable scripts so that we can keep .meta files in repo

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,5 @@ sysinfo.txt
 !/Resources/StandardMaterials/*.meta
 !/Resources/StandardMaterials/line_shaders/*.meta
 !/Resources/StandardMaterials/defaults/*.meta
+!/unity/scripts/*.meta
 
