gsUnityVR needs to be dependency for asmdefs...will this work if it is not included though? ugh.

--- a/frame3Sharp.asmdef
+++ b/frame3Sharp.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "frame3Sharp",
     "references": [
-        "geometry3Sharp"
+        "geometry3Sharp",
+		"gsUnityVR"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
